Created basic functionalities

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Kanban board</title>
+    <title>Project manager</title>
     <link rel="stylesheet" href="app.css" />
     <script src="dist/app.js" defer></script>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+    </style>
   </head>
   <body>
     <template id="project-input">
